Test for opengraph

--- a/blog-post.html
+++ b/blog-post.html
@@ -9,6 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <meta property="og:url" content="Poopoo1" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Poopoo3" />
+    <meta property="og:description" content="Poopoo4" />
+    <meta property="og:image" content="images/favicon.png" />
+
     <!-- Page attributes -->
     <link rel="shortcut icon" href="images/favicon.png">
 
